# YouTubeDownloader

./: downloader.py  main.py  pyproject.toml  readme.md  requirements.txt  worker.py
src/: __init__.py  downloader.py  main.py  worker.py
styles/: dark.qss  light.qss
