[tool.poetry]
name = "youtubedownloader"
version = "0.1.0"
description = ""
authors = ["Vladislav Marahovskiy <vladislav.marahovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyqt6 = "^6.9.0"
yt-dlp = "^2025.4.30"
ffmpeg-python = "^0.2.0"
pyinstaller = "^6.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
